<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".activity.TransactionDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editTransactionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="55dp"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/text58"
                android:textSize="18sp"
                app:backgroundTint="@color/primary"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="61dp"
                android:background="@drawable/outlined_background"
                android:dropDownWidth="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/editTransactionBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text55"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView58"
                app:layout_constraintEnd_toStartOf="@+id/textView57"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text56"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView56"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView56"
                app:layout_constraintTop_toTopOf="@+id/textView56" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/text20"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/spinner4"
                app:layout_constraintEnd_toEndOf="@+id/textView56"
                app:layout_constraintStart_toStartOf="@+id/textView56"
                app:layout_constraintTop_toBottomOf="@+id/textView56" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/text26"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView58"
                app:layout_constraintEnd_toEndOf="@+id/textView57"
                app:layout_constraintStart_toStartOf="@+id/textView57"
                app:layout_constraintTop_toTopOf="@+id/textView58" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text53"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        app:drawableStartCompat="@drawable/arrow_left_long_solid"
        app:drawableTint="@color/default_white_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/text54"
        android:textColor="@color/dark_white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextBudget3"
        app:layout_constraintTop_toBottomOf="@+id/editTextBudget3" />

    <EditText
        android:id="@+id/editTextBudget2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:background="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:inputType="numberDecimal"
        android:text="0"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/white_cursor"
        android:textSize="54sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView54" />

    <EditText
        android:id="@+id/editTextBudget3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="text"
        android:text="@string/text27"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/white_cursor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/editTextBudget2" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text42"
        android:textColor="@color/white"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBudget2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextBudget2" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:paddingEnd="7dp"
        android:textAlignment="center"
        app:drawableEndCompat="@drawable/delete"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView51" />

</androidx.constraintlayout.widget.ConstraintLayout>