<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/budget_background"
    tools:context=".activity.CreateMonthlyBudgetActivity">

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text38"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView75" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:drawableStart="@drawable/arrow_left_long_solid"
        android:drawableTint="@color/default_white_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text39"
        android:textColor="@color/dark_white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toBottomOf="@+id/textView75" />

    <EditText
        android:id="@+id/editTextBudget4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        android:textCursorDrawable="@drawable/white_cursor"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView77"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/text42"
        android:textColor="@color/white"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBudget4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextBudget4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addMonthBudgetBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/inter_semi_bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/text72"
        android:textSize="18sp"
        app:backgroundTint="@color/food_icon"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>